# portablemc

./: .gitignore  Cargo.toml  README.md  build.py  gen_core.py  gen_packages.py  portablemc.py  portablemc_core.py  portablemc_oo.py  portablemc_rework.py  pyproject.toml  setup.py  test.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  mirror.yml  test.yml  test.yml.dis
.github/workflows/data/: release-notes.md  target-readme.txt
addons/: __init__.py  richer.py  richer.py.dis  scripting.py
addons/archives/: README.md  __init__.py  addon.json
addons/coderpack/: __init__.py  coderpack.py
addons/console/: __init__.py  addon.json  pyproject.toml
addons/fabric/: README.md  __init__.py  addon.json
addons/forge/: README.md  __init__.py  addon.json
addons/forge/wrapper/: .gitignore  pom.xml
addons/modloader_fabric/: __init__.py  fabric.py
addons/modrinth/: README.md  __init__.py  addon.json
addons/richer/: __init__.py  richer.py
addons/scripting/: __init__.py  buffer.py  reflect.py  scripting.py  server.py
addons/scripting/java/: .gitignore
addons/scripting/mc/: __init__.py  base.py  entity.py  gui.py  level.py  (+1 more)
doc/: ADDON.md  API.md
exts/: richer.py  scripting.py
exts/scripting_dev/: .gitignore
portablemc/: Cargo.toml  __init__.py  __main__.py  auth.py  cli.py  download.py  fabric.py  forge.py  http.py  lwjgl.py  optifine.py  optifine_withprefix.py  standard.py  task.py  util.py  vanilla.old.py  vanilla.py
portablemc-c/: Cargo.toml
portablemc-c/include/: portablemc.h
portablemc-c/src/: err.rs  event.rs
portablemc-cli/: Cargo.toml  build.rs
portablemc-cli/src/: main.rs  output.rs  parse.rs
portablemc-ffi/: Cargo.toml
portablemc-ffi/include/: portablemc.h
portablemc-ffi/src/: alloc.rs  base.rs  cstr.rs  err.rs  lib.rs  msa.rs
portablemc-ffi/src/raw/: generated.rs
portablemc-py/: Cargo.toml  pyproject.toml
portablemc-py/python/portablemc/: __init__.py
portablemc-py/python/portablemc/_portablemc/: __init__.pyi  forge.pyi  mojang.pyi  msa.pyi
portablemc-py/src/: forge.rs  msa.rs
portablemc/cli/: __init__.py  complete.py  lang.py  output.py  parse.py  util.py
portablemc/src/: download.rs  lib.rs  maven.rs  msa.rs  path.rs  tokio.rs
portablemc/tests/: download.rs  event.rs  mojang.rs
rust/: .gitignore  Cargo.toml
rust/portablemc/: Cargo.toml
rust/portablemc-c/include/: portablemc.h
rust/portablemc-c/src/: alloc.rs  base.rs  cstr.rs  event.rs
rust/portablemc-c/src/raw/: generated.rs  mod.rs
rust/portablemc-capi/: Cargo.toml
rust/portablemc-capi/include/: portablemc.h
rust/portablemc-cli/: Cargo.toml
rust/portablemc-cli/src/: auth.rs  format.rs  main.rs  output.rs  parse.rs
rust/portablemc-cli/src/cmd/: auth.rs  login.rs  mod.rs  search.rs  start.rs
rust/portablemc-cli/src/output/: human.rs  machine.rs  mod.rs
rust/portablemc-ffi/: Cargo.toml
rust/portablemc-ffi/include/: portablemc.h
rust/portablemc-ffi/src/: alloc.rs  base.rs  cstr.rs  err.rs  ffi.rs  lib.rs  msa.rs  standard.rs
rust/portablemc-ffi/src/raw/: generated.rs  mod.rs
rust/portablemc-ffi/tests/: ffi.rs
rust/portablemc-ffi/tests/ffi/: main.c
rust/portablemc-py/: .gitignore  Cargo.toml
rust/portablemc-py/python/portablemc/: __init__.py
rust/portablemc-py/python/portablemc/_portablemc/: base.pyi  download.pyi  fabric.pyi  forge.pyi  mojang.pyi  standard.pyi
rust/portablemc-py/src/: base.rs  fabric.rs  forge.rs  installer.rs  lib.rs  mojang.rs  standard.rs  uuid.rs
rust/portablemc/examples/: launch.rs
rust/portablemc/src/: download.rs  gav.rs  http.rs  lib.rs  maven.rs  msa.rs  path.rs  serde.rs
rust/portablemc/src/base/: mod.rs
rust/portablemc/src/fabric/: mod.rs  serde.rs
rust/portablemc/src/forge/: mod.rs  serde.rs
rust/portablemc/src/moj/: mod.rs
rust/portablemc/src/mojang/: mod.rs  serde.rs
rust/portablemc/src/standard/: mod.rs  serde.rs
rust/portablemc/tests/: event.rs  install.rs  mojang.rs  version.rs
rust/portablemc/tests/data/versions/: 1.5.2.json  1.7.10.json  client_not_found.json  no_path_lib.json
rust/src/: auth.rs  context.rs  download.rs  gav.rs  http.rs  install.rs  lib.rs  mojang.rs  msa.rs  path.rs  standard.rs  util.rs
rust/src/cli/: main.rs  output.rs
rust/src/mojang/: manifest.rs  mod.rs  serde.rs
rust/src/standard/: download.rs  error.rs  metadata.rs  mod.rs  serde.rs  specifier.rs
src/: workspace.py
src/archives/: README.md  pyproject.toml
src/archives/portablemc_archives/: __init__.py
src/console/: README.md  pyproject.toml
src/console/portablemc_console/: __init__.py
src/core/: README.md  pyproject.toml
src/fabric/: README.md  pyproject.toml
src/fabric/portablemc_fabric/: __init__.py
src/forge/: README.md  pyproject.toml
src/forge/portablemc_forge/: __init__.py
src/forge/portablemc_forge/wrapper/src/main/java/argo/jdom/: JsonConstants.java  JsonNode.java  JsonNodeFactories.java  JsonNodeType.java  JsonObject.java  JsonRootNode.java
src/forge/portablemc_forge/wrapper/src/main/java/net/minecraftforge/installer/: ActionType.java  ServerInstall.java  SimpleInstaller.java  VersionInfo.java
src/forge/portablemc_forge/wrapper/src/main/java/net/minecraftforge/installer/actions/: ActionCanceledException.java  ClientInstall.java
src/forge/portablemc_forge/wrapper/src/main/java/net/minecraftforge/installer/json/: Install.java  InstallV1.java  Util.java
src/forge/portablemc_forge/wrapper/src/main/java/portablemc/wrapper/: InstallRunnerType.java  Main.java  V1InstallRunner.java  V2InstallRunner.java  WrapperUtil.java
src/modrinth/: pyproject.toml
src/modrinth/portablemc_modrinth/: __init__.py
src/quilt/: README.md  pyproject.toml
src/quilt/portablemc_quilt/: __init__.py
test/: conftest.py  test_cli_misc.py  test_download.py  test_install.py  test_misc.py  test_project.py
test/common/: test_lock_files.py
test/core/: test_cli_misc.py  test_download.py  test_http.py  test_install.py  test_misc.py  test_new_install.py  test_version.py
xtask/: Cargo.toml
xtask/data/: README
xtask/src/: main.rs
(+67 files in other folders)
