[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "portablemc"
version = "2.0.1"
description = "PortableMC is a module that provides both an API for development of your custom launcher and an executable script to run PortableMC CLI."
authors = ["Théo Rozier <contact@theorozier.fr>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/mindstorm38/portablemc"
repository = "https://github.com/mindstorm38/portablemc"
documentation = "https://github.com/mindstorm38/portablemc"
keywords = ["minecraft", "launcher", "portable", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console"
]
packages = [
    { include = "portablemc" }
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.scripts]
portablemc = "portablemc.cli:main"
