[package]
name = "portablemc-c"
description = "Bindings to PortableMC for C language."
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
portablemc.workspace = true

uuid.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

tempfile.workspace = true

[lib]
name = "portablemc_ffi"
crate-type = ["staticlib", "cdylib"]
