[package]
name = "portablemc-ffi"
description = "Bindings to PortableMC for C language, and more in the future."
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
portablemc.workspace = true

uuid.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

tempfile.workspace = true

[lib]
# Named like this to avoid collision with portablemc, it's renamed by deploy workflow.
name = "portablemc_ffi"
crate-type = ["staticlib", "cdylib"]
