[package]
name = "portablemc-py"
description = "The Python API to PortableMC."
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
portablemc.workspace = true

uuid.workspace = true

pyo3 = { version = "0.23.4", features = ["extension-module"] }

[lib]
name = "portablemc_py"
crate-type = ["cdylib"]
