[workspace]
members = ["portablemc", "portablemc-cli", "portablemc-ffi", "portablemc-py"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "5.0.0-beta.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
homepage = "https://github.com/mindstorm38/portablemc"
repository = "https://github.com/mindstorm38/portablemc"

[workspace.dependencies]
portablemc = { path = "portablemc", version = "=5.0.0-beta.0" }

# Utils
thiserror = "2.0.3"

# Serde & co.
serde = { version = "1.0.215", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_json = "1.0.133"

# Parsers
xmlparser = "0.13.6"

# Data types
uuid = { version = "1.11.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
regex-lite = "0.1.6"

# Crypto
sha1 = "0.10.6"
md5 = "0.7.0" 
jsonwebtoken = "9.3.0"

# Data structures
indexmap = "2.7.0"
elsa = "1.10"
bytes = "1.9"
zip = "2.2.1"

# Sync
once_cell = "1.20.2"

# OS
gethostname = "0.5.0"
dunce = "1.0.5"
os_info = "3.8.2"
dirs = "6.0.0"
webbrowser = "1.0.3"
windows-registry = "0.2.0"

# Async
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "fs", "time", "net", "macros"] }
reqwest = { version = "0.12.9", features = ["json"] }

# CLI
clap = { version = "4.5.21", features = ["derive", "wrap_help", "env"] }
ctrlc = "3.4.5"

# Testing
assert_fs = "1.1.2"
