[workspace]
members = ["portablemc", "portablemc-cli", "portablemc-ffi", "portablemc-py"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "5.0.0-beta.0"
authors = ["Théo Rozier <contact@theorozier.fr>"]
homepage = "https://github.com/mindstorm38/portablemc"
repository = "https://github.com/mindstorm38/portablemc"
rust-version = "1.85.1"

[workspace.dependencies]
portablemc = { path = "portablemc", version = "=5.0.0-beta.0" }

# Utils
thiserror = "2.0.3"

# Serde & co.
serde = { version = "1.0.215", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_json = "1.0.133"

# Parsers
xmlparser = "0.13.6"

# Data types
uuid = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }

# Regex, we intentionally disable the Unicode feature to avoid bloating us.
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }

# Crypto
sha1 = "0.10.6"
md5 = "0.7.0" 
jsonwebtoken = "9.3.0"

# Data structures
indexmap = "2.7.0"
elsa = "1.10"
zip = "2.2.1"
slab = "0.4.9"

# Sync
once_cell = "1.20.2"

# OS
gethostname = "0.5.0"
dunce = "1.0.5"
os_info = "3.8.2"
dirs = "6.0.0"
webbrowser = "1.0.3"
windows-registry = "0.2.0"

# Async
tokio = "1.41.1"
reqwest = "0.12.9"

# CLI
clap = "4.5.21"
ctrlc = "3.4.5"

# Testing
tempfile = "3.19.1"
