[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "portablemc_console"
version = "1.0.0"
description = "Provide an interactive console for the Minecraft process' output. Also provide an API for other addons to customize the UI."
authors = ["Théo Rozier <contact@theorozier.fr>"]
license = "GPL-3.0-only"
keywords = ["portablemc", "addon", "console"]
packages = [
    { include = "__init__.py" }
]

[tool.poetry.dependencies]
python = ">=3.6.1"
prompt_toolkit = ">=3.0.16, <3.1.0"

[tool.poetry.plugins."portablemc.addon"]
console = "portablemc_console:load"
