[package]
name = "portablemc-cli"
description = "Command line utility for launching Minecraft quickly and reliably with included support for Mojang versions and popular mod loaders."
categories = ["games", "command-line-utilities"]
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
portablemc.workspace = true

clap = { version = "4.5.21", features = ["derive", "wrap_help", "env"] }

chrono = "0.4.38"
ctrlc = "3.4.5"

reqwest = "0.12.9"    # Must match the API
uuid = "1.11.0"       # Must match the API
xmlparser = "0.13.6"  # Must match the API, No deps

[[bin]]
name = "portablemc"
path = "src/main.rs"
