[package]
name = "portablemc-cli"
description = "Command line utility for launching Minecraft quickly and reliably with included support for Mojang versions and popular mod loaders."
categories = ["games", "command-line-utilities"]
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true

[dependencies]
portablemc.workspace = true

thiserror.workspace = true

serde.workspace = true
serde_path_to_error.workspace = true
serde_json.workspace = true

xmlparser.workspace = true

chrono.workspace = true
uuid.workspace = true

reqwest.workspace = true

jsonwebtoken.workspace = true

zip.workspace = true

webbrowser.workspace = true

clap = { workspace = true, features = ["derive", "wrap_help", "env"] }
ctrlc.workspace = true

[[bin]]
name = "portablemc"
path = "src/main.rs"
doc = false
