[package]
name = "portablemc-ffi"
description = "Bindings to PortableMC for any language."
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
portablemc.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

tempfile.workspace = true

[lib]
name = "portablemc_ffi"
crate-type = ["staticlib", "cdylib"]
