[package]
name = "portablemc"
description = "Developer-oriented crate for launching Minecraft quickly and reliably with included support for Mojang versions and popular mod loaders. See portablemc-cli for the reference implementation."
categories = ["games"]
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
serde_json = "1.0"

uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"]}
regex = "1.10"          # No particular dep

thiserror = "1.0"       # No dep

gethostname = "0.5"
os_info = "3"           # Small dep: log,serde
dirs = "5.0"            # No dep

sha1 = "0.10"           # Small dep: cpufeatures,digest
md5 = "0.7"             # No dep

zip = "2.2"             # Medium dep: aes,bzip2,deflate64,flate2,indexmap,rand,time,zstd

# Big dep: base64,futures,h2,http
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "=1.37", features = ["rt", "rt-multi-thread", "fs", "time", "net", "macros"] }
