[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "portablemc-archives"
version = "1.1.0"
description = "Provides support for archived versions on archive.org manager by Omniarchive community."
authors = ["Théo Rozier <contact@theorozier.fr>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
portablemc = { path = "../core/" }
python = ">=3.6"
