[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "portablemc-console"
version = "2.0.0"
description = "Provide an interactive console for the Minecraft process' output. Also provide an API for other addons to customize the UI."
authors = ["Théo Rozier <contact@theorozier.fr>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.2"
portablemc = "^3"
prompt-toolkit = "~3.0.16"

[tool.poetry.group.dev.dependencies]
portablemc = { path = "../core/", develop = false }
