[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "portablemc-fabric"
version = "1.1.0"
description = "Start Minecraft using the Fabric mod loader using '<exec> start fabric:[<mc-version>[:<loader-version>]]'."
authors = ["Théo Rozier <contact@theorozier.fr>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
portablemc = { path = "../core/" }
python = ">=3.6"
